<resources>
    <string name="app_name">S\u00B2 e-wallet</string>
    <string name="home">Home </string>
    <string name="RM">RM </string>
    <string name="news">News</string>
    <string name="deals">12.12 DEALS 12 discount without code and RM 12 with code.</string>
    <string name="collaboration">Collaboration</string>
    <string name="FandB">F &amp; B </string>
    <string name="OS">Shopping</string>
    <string name="Tickets">Tickets</string>
    <string name="Scan">Scan</string>
    <string name="Pay">Pay</string>
    <string name="Send">Send</string>
    <string name="Receive">Receive</string>
    <string name="activity1">Plant a Tree and &lt;br /&gt; Get Oxygen Free</string>
    <string name="onGoingActivities">Ongoing Activities</string>
    <string name="activity2">Skip the straw &lt;br /&gt; Save a sea turtle </string>
    <string name="activity3">Don laminate the earth </string>
    <string name="act_desc">This is the activity ongoing</string>
    <string name="tree">Please select a tree</string>
    <string name="location">Please select a location</string>
    <string name="select">Select</string>
    <string name="myTrees">My Trees</string>
    <string name="rewards">Rewards</string>
    <string name="transactions">TXN</string>
    <string name="missions">Missions</string>
    <string name="walletbalance">Wallet Balance</string>
    <string name="currentbalance">Current Balance</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="accountSettings">Account Settings</string>
    <string name="paymentSettings">Payment Settings</string>
    <string name="Information">Information</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="userName">Name</string>
    <string name="title1">Start planting trees with us! </string>
    <string name="btnMyTree">My Trees</string>
    <string name="btnVisitFriends">Visit Friends</string>
    <string name="btnHistory">History</string>
    <string name="btnPlant">Plant</string>
    <string name="title">Wanted to plant more trees?</string>
    <string name="explanation">Plant trees by using your S points by clicking the button below.</string>
    <string name="title_activity_s2e_wallet_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="GreenLeaf">GreenLeaf</string>
    <string name="lbDaily">Daily</string>
    <string name="lbWeekly">Weekly</string>
    <string name="lbMonthly">Monthly</string>
    <string name="BalancePoints">Balance Points : </string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="activities">Activities</string>
    <string name="leaderBoard">LeaderBoard</string>
    <string name="history">History</string>
    <string name="profile">User profile</string>
    <string name="my_activities">My Activities</string>
    <string name="on_going">On Going Activities</string>
    <string name="FBC1"> RM50 Eat Ice Cream Today Voucher </string>
    <string name="FBC2">Cookies For Life , Get It Now!</string>
    <string name="FBC3">Boba fever ! RM100 Voucher</string>
    <string name="FBC4">Sushi Voucher worth RM50</string>
    <string name="back_to_home">Back to Home</string>
    <string name="yay_you_have_planted_a_tree">Yay ! You have planted a tree!</string>
    <string name="tree_id">Tree id:</string>
    <string name="tree_">Tree:</string>
    <string name="location_">Location:</string>
    <string name="tree_image">Tree image</string>

    <string name="btnPay">Pay</string>
    <string name="RecipientID">Recipient ID</string>
    <string name="PayAmount">Amount</string>

</resources>
