<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTreeMain">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVisitFriends" />

    <ImageView
            android:id="@+id/imageViewGrowBanner"
            android:layout_width="0dp"
            android:layout_height="154dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            app:srcCompat="@drawable/growingplant" />

    <Button
        android:id="@+id/buttonMyTrees"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedcornerbutton"
        android:drawableTop="@drawable/forest"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/btnMyTree"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVisitFriends"
        app:layout_constraintEnd_toStartOf="@+id/buttonVisitFriends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGrowBanner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonVisitFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundedcornerbutton"
        android:drawableTop="@drawable/friendship"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/btnVisitFriends"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/buttonHistory"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/buttonMyTrees"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGrowBanner" />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/roundedcornerbutton"
        android:drawableTop="@drawable/history"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/btnHistory"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVisitFriends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonVisitFriends"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGrowBanner"
        app:layout_constraintVertical_bias="0.896" />

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/title1"
        android:textColor="#020101"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGrowBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/textViewDesc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/explanation"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <Button
            android:id="@+id/buttonPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/roundedcornerbutton"
            android:text="@string/btnPlant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewDesc2"
            app:layout_constraintStart_toStartOf="@+id/textViewDesc2"
            app:layout_constraintTop_toBottomOf="@+id/textViewDesc2"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="122dp"
            android:layout_marginRight="122dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/money"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/buttonVisitFriends"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGrowBanner"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/BalancePoints"
            app:layout_constraintBottom_toTopOf="@+id/buttonMyTrees"
            app:layout_constraintEnd_toStartOf="@+id/buttonVisitFriends"
            app:layout_constraintStart_toStartOf="@+id/imageViewGrowBanner"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGrowBanner"
            app:layout_constraintVertical_bias="0.65999997" />


    </androidx.constraintlayout.widget.ConstraintLayout>
